# backtests

./: .gitignore  README.md  bt_MAA.py  bt_MAA_DM.py  bt_MAA_DM1.py  bt_MAA_DM3.py  bt_MAA_RM.py  bt_MAA_RM_ratio.py  bt_MAA_SM.py  bt_SAA.py  bt_SAA_CP1.py  bt_SAA_CP2.py  bt_SAA_GB.py  bt_SAA_GB1.py  pyproject.toml  test_example.py  test_relative_momentum.py  test_simple_momentum.py
_Backtests/: MAA_CM010.py  MAA_CM020.py  MAA_CM030.py  MAA_CM040.py  MAA_DM010.py  MAA_DM020.py  MAA_DM030.py  MAA_DM040.py  MAA_DM050.py  MAA_DM060.py  MAA_SM.py  MAA_WM010.py  MAA_WM011.py  MIX_GB_DM010.py  MIX_GB_DM011.py  MIX_GB_DM020.py  MIX_GB_DM040.py  MIX_GB_HW010.py  MIX_GB_HW011.py  MIX_GB_HW012.py  MIX_GB_HW013.py  SAA_Base.py  SAA_CP010.py  SAA_CP020.py  SAA_GB010.py  SAA_GB020.py  bt_MAA_DM1.py  bt_MAA_DM2.py  bt_MAA_DM3.py  bt_MAA_DM4.py  bt_MAA_DM_test.py  bt_MAA_RM_ratio.py  bt_MIX_GB_DM1.py  bt_MIX_GB_DM3.py  bt_SAA_Base.py  bt_SAA_CP1.py  bt_SAA_CP2.py  bt_SAA_GB1.py  bt_SAA_GB2.py  bt_SAA_WB1.py  (+1 more)
_Examples/: ex_tree_structure.py
_Reports/: bt_MAA_DM1.ipynb  bt_MAA_DM2.ipynb  bt_SAA@monthly.ipynb  bt_SAA@yearly.ipynb
btpp/: algos.py  helper.py  maa.py  strategy.py
tests/: test_bt_training.py  test_btpp.py
