[tool.poetry]
name = "bt-training"
version = "0.1.0"
description = ""
authors = ["Junho OH <pinedance@gmail.com>"]
readme = "README.md"  # Markdown files are supported

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.70"
bt = "^0.2.9"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
